Custom-HPA/Resource/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: custom-hpa-manager-svc
   namespace: custom-metrics
   labels:
      stack: custom-hpa
      app: manager
spec:
   ports:
      - port: 5001
        targetPort: 5001
        name: http1
      - port: 5002
        targetPort: 5002
        name: http2
   selector:
      stack: custom-hpa
      app: manager
